--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start" :  "node app.js",
-    "dev" : "nodemon app.js"
+    "start": "node src/app.js",
+    "test": "node src/app.js"
   },
   "author": "",
   "license": "ISC",
